Update regex patterns and execution counts in Jupyter notebooks for improved data extraction

--- a/notebooks/01-Scopus_Data_Extraction.ipynb
+++ b/notebooks/01-Scopus_Data_Extraction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 324 results.\n"
+      "Found 600 results.\n"
      ]
     }
    ],
@@ -94,12 +94,18 @@
     "\n",
     "# Define the search query using a keyword\n",
     "search_query = (\n",
-    "    'TITLE-ABS-KEY((\"smart cit*\" OR \"intelligent cit*\" OR \"urban computing\" OR \"urban environment*\" OR '\n",
-    "    '\"digital city\" OR \"smart urban\" OR \"city infrastructure\" OR \"urban development\") AND '\n",
-    "    '(\"generative AI\" OR \"generative artificial intelligence\" OR \"GAN\" OR \"diffusion model*\" OR '\n",
-    "    '\"large language model*\" OR \"LLM\" OR \"LLMs\" OR \"large language model*\" OR \"variational autoencoder*\"' \n",
-    "    'OR \"VAE\" OR \"RAG\" OR \"AI Agent*\")) AND '\n",
-    "    'PUBYEAR > 2019 AND PUBYEAR < 2025 AND (LIMIT-TO(LANGUAGE, \"English\"))'\n",
+    "    'TITLE-ABS-KEY('\n",
+    "    '(\"smart cit*\" OR \"intelligent cit*\" OR \"digital city\" OR '\n",
+    "    '\"smart urban\" OR \"urban computing\") '\n",
+    "    \"AND \"\n",
+    "    '(\"generative AI\" OR \"generative artificial intelligence\" OR '\n",
+    "    '\"GAN\" OR \"generative adversarial network*\" OR \"diffusion model*\" OR '\n",
+    "    '\"large language model*\" OR \"LLM\" OR \"LLMs\" OR '\n",
+    "    '\"variational autoencoder*\" OR \"VAE*\" OR \"autoregressive model*\" OR '\n",
+    "    '\"transformer*\" OR \"retrieval-augmented generation\" OR \"RAG\" OR \"AI agent*\")'\n",
+    "    \") \"\n",
+    "    \"AND PUBYEAR > 2018 AND PUBYEAR < 2026 \"\n",
+    "    'AND LIMIT-TO(LANGUAGE, \"English\")'\n",
     ")\n",
     "\n",
     "# Initialize the ElsSearch object with the search query and client\n",
@@ -124,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,22 +162,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV exported 324 records\n",
-      "JSON exported with 324 records\n"
+      "CSV exported 512 records\n",
+      "JSON exported with 512 records\n"
      ]
     }
    ],
    "source": [
+    "# Filter out documents with missing doi\n",
+    "results = [doc for doc in doc_srch.results if doc.get(\"prism:doi\")]\n",
+    "\n",
     "# Export the results to a CSV file\n",
-    "export_to_csv(doc_srch.results, \"../data/01_scopus_results.csv\")\n",
-    "export_to_json(doc_srch.results, \"../data/01_scopus_results.json\")"
+    "export_to_csv(results, \"../data/01_scopus_results.csv\")\n",
+    "export_to_json(results, \"../data/01_scopus_results.json\")"
    ]
   }
  ],
