--- a/notebooks/02-Extract_Scopus_Data.ipynb
+++ b/notebooks/02-Extract_Scopus_Data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,26 +249,8 @@
     "                            if \"subject_areas\" in data:\n",
     "                                stats[\"with_subject_areas\"] += 1\n",
     "\n",
-    "\n",
-    "                # Method 2: Try to get abstract from FullDoc if DOI is available\n",
-    "                # if data.get(\"doi\") and not abstract_found:\n",
-    "                #     print(f\"Fetching abstract for DOI: {data['doi']}\")\n",
-    "                #     doc = FullDoc(doi=data[\"doi\"])\n",
-    "                #     if doc.read(client):\n",
-    "                #         if (\n",
-    "                #             \"coredata\" in doc.data\n",
-    "                #             and \"dc:description\" in doc.data[\"coredata\"]\n",
-    "                #         ):\n",
-    "                #             data[\"abstract\"] = doc.data[\"coredata\"][\"dc:description\"]\n",
-    "                #             abstract_found = True\n",
-    "                #             stats[\"with_abstract\"] += 1\n",
-    "                #         elif \"dc:description\" in doc.data:\n",
-    "                #             data[\"abstract\"] = doc.data[\"dc:description\"]\n",
-    "                #             abstract_found = True\n",
-    "                #             stats[\"with_abstract\"] += 1\n",
-    "\n",
     "                # Avoid hitting rate limits\n",
-    "                time.sleep(1)\n",
+    "                time.sleep(0.2)\n",
     "\n",
     "            except Exception as e:\n",
     "                if verbose:\n",
@@ -297,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -305,22 +287,14 @@
      "output_type": "stream",
      "text": [
       "Retrieving detailed information for documents...\n",
-      "Total documents: 324\n",
-      "Filtered documents: 269\n"
+      "Total documents: 512\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing documents:   0%|          | 0/269 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing documents: 100%|██████████| 269/269 [06:19<00:00,  1.41s/it]"
+      "Processing documents: 100%|██████████| 512/512 [12:04<00:00,  1.42s/it]"
      ]
     },
     {
@@ -329,10 +303,10 @@
      "text": [
       "\n",
       "Data Capture Statistics:\n",
-      "Total documents processed: 269\n",
-      "Documents with abstracts: 269 (100.0%)\n",
-      "Documents with keywords: 243 (90.3%)\n",
-      "Documents with subject areas: 243 (90.3%)\n"
+      "Total documents processed: 512\n",
+      "Documents with abstracts: 512 (100.0%)\n",
+      "Documents with keywords: 475 (92.8%)\n",
+      "Documents with subject areas: 475 (92.8%)\n"
      ]
     },
     {
@@ -354,14 +328,9 @@
     "# print(f\"Tags in the results: {tags}\")\n",
     "# print(f\"Full tags in the results: {full_tags}\")\n",
     "\n",
-    "# Filter out documents with missing doi\n",
-    "filtered_results = [doc for doc in results if doc.get(\"prism:doi\")]\n",
-    "\n",
     "print(f\"Total documents: {len(results)}\")\n",
-    "print(f\"Filtered documents: {len(filtered_results)}\")\n",
     "\n",
-    "\n",
-    "doc_info = extract_info(filtered_results, client, fetch_details=True, verbose=False)"
+    "doc_info = extract_info(results, client, fetch_details=True, verbose=False)"
    ]
   },
   {
@@ -374,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,15 +375,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV exported with 269 records\n",
-      "JSON exported with 269 records\n",
+      "CSV exported with 512 records\n",
+      "JSON exported with 512 records\n",
       "Search results exported successfully.\n"
      ]
     }
