Extend smart city domain configurations with additional categories and keywords

--- a/notebooks/98-Abstract_Semantic_Classification.ipynb
+++ b/notebooks/98-Abstract_Semantic_Classification.ipynb
@@ -190,13 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['Economy',\n",
+       " 'Business',\n",
        " 'Economic Management',\n",
        " 'Innovation Policy',\n",
        " 'Socioeconomics',\n",
@@ -205,17 +206,18 @@
        " 'Public Policies',\n",
        " 'Urban Planning',\n",
        " 'Social Equity',\n",
+       " 'Cybersecurity',\n",
        " 'Living',\n",
-       " 'Heritage Preservation',\n",
+       " 'Home',\n",
+       " 'Tourism',\n",
+       " 'Culture',\n",
        " 'Buildings',\n",
        " 'Education',\n",
        " 'Healthcare',\n",
-       " 'Emergencies',\n",
-       " 'Urban Security and Safety',\n",
+       " 'Emergency Safety',\n",
        " 'Mobility',\n",
-       " 'Traffic Safety',\n",
+       " 'Traffic Management',\n",
        " 'Transportation Systems',\n",
-       " 'Traffic Flow',\n",
        " 'Electric Vehicles',\n",
        " 'Public Transit',\n",
        " 'People',\n",
@@ -225,14 +227,15 @@
        " 'Waste Management',\n",
        " 'Pollution Control',\n",
        " 'Resource Conservation',\n",
-       " 'Energy Management',\n",
+       " 'Energy',\n",
        " 'Smart Grids',\n",
+       " 'Lightning',\n",
        " 'Air Quality',\n",
        " 'Water Quality',\n",
        " 'Green Spaces']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +311,7 @@
        "        [1, 1, 1,  ..., 0, 0, 0]])}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,8 +319,8 @@
    "source": [
     "# Prepare for Classification\n",
     "\n",
+    "# model = \"tasksource/ModernBERT-base-nli\"\n",
     "model = \"facebook/bart-large-mnli\"\n",
-    "# model = \"facebook/bart-large-cnn\"\n",
     "\n",
     "# Initialize the tokenizer\n",
     "tokenizer = AutoTokenizer.from_pretrained(model)\n",
@@ -343,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +373,7 @@
       "\n",
       "Testing single classification...\n",
       "Test successful!\n",
-      "Result: {'sequence': 'Fire detection has held stringent importance in computer vision for over half a century. The development of early fire detection strategies is pivotal to the realization of safe and smart cities, inhabitable in the future. However, the development of optimal fire and smoke detection models is hindered by limitations like publicly available datasets, lack of diversity, and class imbalance. In this work, we explore the possible ways forward to overcome these challenges posed by available datasets. We study the impact of a class-balanced dataset to improve the fire detection capability of state-of-the-art (SOTA) vision-based models and propose the use of generative models for data augmentation, as a future work direction. First, a comparative analysis of two prominent object detection architectures, You Only Look Once version 7 (YOLOv7) and YOLOv8 has been carried out using a balanced dataset, where both models have been evaluated across various evaluation metrics including precision, recall, and mean Average Precision (mAP). The results are compared to other recent fire detection models, highlighting the superior performance and efficiency of the proposed YOLOv8 architecture as trained on our balanced dataset. Next, a fractal dimension analysis gives a deeper insight into the repetition of patterns in fire, and the effectiveness of the results has been demonstrated by a windowing-based inference approach. The proposed Slicing-Aided Hyper Inference (SAHI) improves the fire and smoke detection capability of YOLOv8 for real-life applications with a significantly improved mAP performance over a strict confidence threshold. YOLOv8 with SAHI inference gives a mAP:50-95 improvement of more than 25% compared to the base YOLOv8 model. The study also provides insights into future work direction by exploring the potential of generative models like deep convolutional generative adversarial network (DCGAN) and diffusion models like stable diffusion, for data augmentation.', 'labels': ['Urban Security and Safety', 'Public Services', 'Living', 'Citizens', 'Public Policies', 'Community Engagement', 'Emergencies', 'Innovation Policy', 'Mobility', 'Green Spaces', 'Urban Planning', 'Smart Grids', 'Social Equity', 'Learning and Teaching', 'Buildings', 'Resource Conservation', 'Economy', 'People', 'Heritage Preservation', 'Governance', 'Air Quality', 'Traffic Flow', 'Transportation Systems', 'Energy Management', 'Education', 'Economic Management', 'Traffic Safety', 'Pollution Control', 'Healthcare', 'Electric Vehicles', 'Public Transit', 'Water Quality', 'Socioeconomics', 'Waste Management'], 'scores': [0.170751690864563, 0.051121171563863754, 0.046305883675813675, 0.045778460800647736, 0.045360613614320755, 0.042209699749946594, 0.03866398334503174, 0.037198033183813095, 0.03315029665827751, 0.03197822719812393, 0.03197105973958969, 0.0306408554315567, 0.028912093490362167, 0.02640768140554428, 0.025881560519337654, 0.025870943441987038, 0.02433946169912815, 0.02416381426155567, 0.023469459265470505, 0.022438330575823784, 0.019858965650200844, 0.01772700622677803, 0.0162979643791914, 0.015684781596064568, 0.015001296065747738, 0.014082131907343864, 0.012612498365342617, 0.012517023831605911, 0.012429806403815746, 0.01200047042220831, 0.011969253420829773, 0.011727550998330116, 0.010871298611164093, 0.010606645606458187]}\n",
+      "Result: {'sequence': 'Fire detection has held stringent importance in computer vision for over half a century. The development of early fire detection strategies is pivotal to the realization of safe and smart cities, inhabitable in the future. However, the development of optimal fire and smoke detection models is hindered by limitations like publicly available datasets, lack of diversity, and class imbalance. In this work, we explore the possible ways forward to overcome these challenges posed by available datasets. We study the impact of a class-balanced dataset to improve the fire detection capability of state-of-the-art (SOTA) vision-based models and propose the use of generative models for data augmentation, as a future work direction. First, a comparative analysis of two prominent object detection architectures, You Only Look Once version 7 (YOLOv7) and YOLOv8 has been carried out using a balanced dataset, where both models have been evaluated across various evaluation metrics including precision, recall, and mean Average Precision (mAP). The results are compared to other recent fire detection models, highlighting the superior performance and efficiency of the proposed YOLOv8 architecture as trained on our balanced dataset. Next, a fractal dimension analysis gives a deeper insight into the repetition of patterns in fire, and the effectiveness of the results has been demonstrated by a windowing-based inference approach. The proposed Slicing-Aided Hyper Inference (SAHI) improves the fire and smoke detection capability of YOLOv8 for real-life applications with a significantly improved mAP performance over a strict confidence threshold. YOLOv8 with SAHI inference gives a mAP:50-95 improvement of more than 25% compared to the base YOLOv8 model. The study also provides insights into future work direction by exploring the potential of generative models like deep convolutional generative adversarial network (DCGAN) and diffusion models like stable diffusion, for data augmentation.', 'labels': ['Emergency Safety', 'Home', 'Public Services', 'Culture', 'Living', 'Citizens', 'Public Policies', 'Community Engagement', 'Innovation Policy', 'Mobility', 'Green Spaces', 'Urban Planning', 'Smart Grids', 'Business', 'Social Equity', 'Learning and Teaching', 'Buildings', 'Resource Conservation', 'Lightning', 'Economy', 'People', 'Governance', 'Air Quality', 'Energy', 'Transportation Systems', 'Cybersecurity', 'Education', 'Economic Management', 'Traffic Management', 'Pollution Control', 'Healthcare', 'Electric Vehicles', 'Public Transit', 'Water Quality', 'Tourism', 'Socioeconomics', 'Waste Management'], 'scores': [0.06706657260656357, 0.056574370712041855, 0.05075244605541229, 0.0466817170381546, 0.045971889048814774, 0.04544827342033386, 0.04503343626856804, 0.041905250400304794, 0.03692973032593727, 0.03291119262576103, 0.03174757584929466, 0.0317404605448246, 0.0304198507219553, 0.029462391510605812, 0.028703557327389717, 0.026217209175229073, 0.02569488435983658, 0.02568434365093708, 0.02511284127831459, 0.024163905531167984, 0.02398952655494213, 0.022276489064097404, 0.019715728238224983, 0.019594760611653328, 0.016180410981178284, 0.015864616259932518, 0.014893095940351486, 0.013980560936033726, 0.012806172482669353, 0.012426741421222687, 0.012340153567492962, 0.011913914233446121, 0.011882921680808067, 0.01164296269416809, 0.010947031900286674, 0.010792885906994343, 0.010530142113566399]}\n",
       "\n",
       "Classifying 5 descriptive sentences...\n"
      ]
@@ -379,7 +382,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|████      | 2/5 [00:34<00:53, 17.93s/it]"
+      "100%|██████████| 5/5 [01:06<00:00, 13.39s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Successfully classified 5 out of 5 sentences\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -524,9 +542,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result 1:\n",
+      "Sequence: Building rooftop extraction has been applied in various fields, such as cartography, urban planning, automatic driving, and intelligent city construction. Automatic building detection and extraction a...\n",
+      "Top Predicted Domains:\n",
+      "  - Buildings: 0.2422\n",
+      "  - Urban Planning: 0.0699\n",
+      "  - Living: 0.0517\n",
+      "----------------------------------------\n",
+      "Result 2:\n",
+      "Sequence: Problem: Modernizing and standardizing place names and addresses is a key challenge in the development of smart cities. Purpose: This paper proposes a solution to address matching challenges, such as ...\n",
+      "Top Predicted Domains:\n",
+      "  - Home: 0.0877\n",
+      "  - Citizens: 0.0639\n",
+      "  - Living: 0.0549\n",
+      "----------------------------------------\n",
+      "Result 3:\n",
+      "Sequence: Distributed multivariate time series anomaly detection is widely-used in industrial equipment monitoring, financial risk management, and smart cities. Although Federated learning (FL) has garnered sig...\n",
+      "Top Predicted Domains:\n",
+      "  - Business: 0.0740\n",
+      "  - Home: 0.0585\n",
+      "  - Community Engagement: 0.0533\n",
+      "----------------------------------------\n",
+      "Result 4:\n",
+      "Sequence: The integration of renewable energy into power networks introduces challenges due to intermittency and unpredictability, making precise expansion planning essential. This research introduces a novel t...\n",
+      "Top Predicted Domains:\n",
+      "  - Smart Grids: 0.2259\n",
+      "  - Energy: 0.0857\n",
+      "  - Home: 0.0446\n",
+      "----------------------------------------\n",
+      "Result 5:\n",
+      "Sequence: Crowd anomaly detection is one of the most popular topics in computer vision in the context of smart cities. A plethora of deep learning methods have been proposed that generally outperform other mach...\n",
+      "Top Predicted Domains:\n",
+      "  - Home: 0.0757\n",
+      "  - Culture: 0.0526\n",
+      "  - Community Engagement: 0.0515\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "def display_classification_results(results):\n",
     "    \"\"\"\n",
