Remove outdated top 50 keywords data and update Scopus data extraction notebook for improved search query and execution counts

--- a/notebooks/01-Scopus_Data_Extraction.ipynb
+++ b/notebooks/01-Scopus_Data_Extraction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 600 results.\n"
+      "Found 663 results.\n"
      ]
     }
    ],
@@ -93,16 +93,40 @@
     "# Import necessary libraries for searching articles\n",
     "\n",
     "# Define the search query using a keyword\n",
+    "# search_query = (\n",
+    "#     'TITLE-ABS-KEY('\n",
+    "#     '(\"smart cit*\" OR \"intelligent cit*\" OR \"digital city\" OR '\n",
+    "#     '\"smart urban\" OR \"urban computing\") '\n",
+    "#     \"AND \"\n",
+    "#     '(\"generative AI\" OR \"generative artificial intelligence\" OR '\n",
+    "#     '\"GAN\" OR \"generative adversarial network*\" OR \"diffusion model*\" OR '\n",
+    "#     '\"large language model*\" OR \"LLM\" OR \"LLMs\" OR '\n",
+    "#     '\"variational autoencoder*\" OR \"VAE*\" OR \"autoregressive model*\" OR '\n",
+    "#     '\"transformer*\" OR \"retrieval-augmented generation\" OR \"RAG\" OR \"AI agent*\")'\n",
+    "#     \") \"\n",
+    "#     \"AND PUBYEAR > 2018 AND PUBYEAR < 2026 \"\n",
+    "#     'AND LIMIT-TO(LANGUAGE, \"English\")'\n",
+    "# )\n",
+    "\n",
     "search_query = (\n",
     "    'TITLE-ABS-KEY('\n",
+    "    # Smart city context\n",
     "    '(\"smart cit*\" OR \"intelligent cit*\" OR \"digital city\" OR '\n",
-    "    '\"smart urban\" OR \"urban computing\") '\n",
+    "    '\"smart urban\" OR \"urban computing\" OR \"urban digital twin*\" OR '\n",
+    "    '\"urban analytics\" OR \"urban simulation\" OR \"urban planning\") '\n",
     "    \"AND \"\n",
+    "    # Generative AI concepts\n",
     "    '(\"generative AI\" OR \"generative artificial intelligence\" OR '\n",
-    "    '\"GAN\" OR \"generative adversarial network*\" OR \"diffusion model*\" OR '\n",
+    "    '\"generative model*\" OR \"generative deep learning\" OR '\n",
+    "    '\"generative adversarial network*\" OR \"GAN\" OR \"CycleGAN\" OR \"StyleGAN*\" OR '\n",
+    "    '\"diffusion model*\" OR \"score-based model*\" OR '\n",
     "    '\"large language model*\" OR \"LLM\" OR \"LLMs\" OR '\n",
-    "    '\"variational autoencoder*\" OR \"VAE*\" OR \"autoregressive model*\" OR '\n",
-    "    '\"transformer*\" OR \"retrieval-augmented generation\" OR \"RAG\" OR \"AI agent*\")'\n",
+    "    '\"variational autoencoder*\" OR \"VAE*\" OR '\n",
+    "    '\"autoregressive model*\" OR \"auto-regressive model*\" OR '\n",
+    "    '\"transformer-based model*\" OR \"transformer architecture\" OR '\n",
+    "    '\"retrieval-augmented generation\" OR \"RAG\" OR \"AI agent*\" OR '\n",
+    "    '\"neural text generation\" OR \"text-to-image\" OR \"text-to-urban\" OR '\n",
+    "    '\"synthetic data\" OR \"data generation\")'\n",
     "    \") \"\n",
     "    \"AND PUBYEAR > 2018 AND PUBYEAR < 2026 \"\n",
     "    'AND LIMIT-TO(LANGUAGE, \"English\")'\n",
@@ -130,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,15 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV exported 512 records\n",
-      "JSON exported with 512 records\n"
+      "JSON exported with 581 records\n"
      ]
     }
    ],
@@ -179,7 +202,7 @@
     "results = [doc for doc in doc_srch.results if doc.get(\"prism:doi\")]\n",
     "\n",
     "# Export the results to a CSV file\n",
-    "export_to_csv(results, \"../data/01_scopus_results.csv\")\n",
+    "# export_to_csv(results, \"../data/01_scopus_results.csv\")\n",
     "export_to_json(results, \"../data/01_scopus_results.json\")"
    ]
   }
@@ -200,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
