--- a/notebooks/02-Extract_Scopus_Data.ipynb
+++ b/notebooks/02-Extract_Scopus_Data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,17 @@
     "import time\n",
     "\n",
     "from tqdm import tqdm\n",
+    "import pandas as pd\n",
+    "from tqdm.auto import tqdm\n",
     "from elsapy.elsdoc import FullDoc, AbsDoc\n",
-    "from elsapy.elsclient import ElsClient"
+    "from elsapy.elsclient import ElsClient\n",
+    "\n",
+    "tqdm.pandas()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,14 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to extract relevant information from search results with filtering\n",
     "def extract_info(results, client, fetch_details=True, verbose=False):\n",
-    "    extracted_data = []\n",
-    "\n",
+    "    # Convert results to DataFrame if not already\n",
+    "    if not isinstance(results, pd.DataFrame):\n",
+    "        df_results = pd.DataFrame(results)\n",
+    "    else:\n",
+    "        df_results = results\n",
+    "    \n",
     "    # Statistics tracking\n",
     "    stats = {\n",
     "        \"total\": 0,\n",
@@ -155,11 +162,16 @@
     "        \"with_keywords\": 0,\n",
     "        \"with_subject_areas\": 0,\n",
     "    }\n",
-    "\n",
-    "    # Use tqdm for progress tracking\n",
-    "    for i, result in enumerate(tqdm(results, desc=\"Processing documents\")):\n",
+    "    \n",
+    "    # Function to process a single document\n",
+    "    def process_document(result):\n",
+    "        nonlocal stats\n",
     "        stats[\"total\"] += 1\n",
-    "\n",
+    "        \n",
+    "        # If result is a Series (row of DataFrame), convert to dict\n",
+    "        if isinstance(result, pd.Series):\n",
+    "            result = result.to_dict()\n",
+    "        \n",
     "        # Basic metadata from search results\n",
     "        data = {\n",
     "            \"title\": result.get(\"dc:title\", \"\"),\n",
@@ -172,7 +184,7 @@
     "                else \"\"\n",
     "            ),\n",
     "            \"document_type\": result.get(\"subtypeDescription\", \"\"),\n",
-    "            \"prism:url\" : result.get(\"prism:url\"),\n",
+    "            \"prism:url\": result.get(\"prism:url\"),\n",
     "            \"scopus_id\": (\n",
     "                result.get(\"dc:identifier\", \"\").replace(\"SCOPUS_ID:\", \"\")\n",
     "                if result.get(\"dc:identifier\")\n",
@@ -189,8 +201,8 @@
     "        if fetch_details:\n",
     "            try:\n",
     "                # Try different methods to get the abstract\n",
-    "                abstract_found = False\n",
-    "\n",
+    "                abstract_found = \"abstract\" in data\n",
+    "                \n",
     "                # Method 1: Try to get abstract from AbsDoc if scopus_id is available\n",
     "                if data[\"scopus_id\"] and not abstract_found:\n",
     "                    abs_doc = AbsDoc(scp_id=data[\"scopus_id\"])\n",
@@ -200,9 +212,7 @@
     "                            \"coredata\" in abs_doc.data\n",
     "                            and \"dc:description\" in abs_doc.data[\"coredata\"]\n",
     "                        ):\n",
-    "                            data[\"abstract\"] = abs_doc.data[\"coredata\"][\n",
-    "                                \"dc:description\"\n",
-    "                            ]\n",
+    "                            data[\"abstract\"] = abs_doc.data[\"coredata\"][\"dc:description\"]\n",
     "                            abstract_found = True\n",
     "                            stats[\"with_abstract\"] += 1\n",
     "                        elif \"dc:description\" in abs_doc.data:\n",
@@ -254,13 +264,17 @@
     "\n",
     "            except Exception as e:\n",
     "                if verbose:\n",
-    "                    print(f\"Error retrieving details for document {i+1}: {str(e)}\")\n",
+    "                    print(f\"Error retrieving details for document: {str(e)}\")\n",
     "                    print(\n",
     "                        f\"Failed document: {data['title']} (DOI: {data.get('doi')}, ScopusID: {data['scopus_id']})\"\n",
     "                    )\n",
     "\n",
-    "        extracted_data.append(data)\n",
-    "\n",
+    "        return data\n",
+    "    \n",
+    "    # Process documents with pandas progress bar\n",
+    "    print(\"Processing documents...\")\n",
+    "    extracted_data = list(df_results.progress_apply(process_document, axis=1))\n",
+    "    \n",
     "    # Print capture statistics\n",
     "    print(\"\\nData Capture Statistics:\")\n",
     "    print(f\"Total documents processed: {stats['total']}\")\n",
@@ -274,12 +288,12 @@
     "        f\"Documents with subject areas: {stats['with_subject_areas']} ({stats['with_subject_areas']*100/stats['total']:.1f}%)\"\n",
     "    )\n",
     "\n",
-    "    return extracted_data\n"
+    "    return extracted_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -287,15 +301,23 @@
      "output_type": "stream",
      "text": [
       "Retrieving detailed information for documents...\n",
-      "Total documents: 512\n"
+      "Total documents: 581\n",
+      "Processing documents with pandas...\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing documents: 100%|██████████| 512/512 [12:04<00:00,  1.42s/it]"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "93c4d0accabe475daa64613a70a830c7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/581 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
@@ -303,34 +325,23 @@
      "text": [
       "\n",
       "Data Capture Statistics:\n",
-      "Total documents processed: 512\n",
-      "Documents with abstracts: 512 (100.0%)\n",
-      "Documents with keywords: 475 (92.8%)\n",
-      "Documents with subject areas: 475 (92.8%)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Total documents processed: 581\n",
+      "Documents with abstracts: 580 (99.8%)\n",
+      "Documents with keywords: 536 (92.3%)\n",
+      "Documents with subject areas: 536 (92.3%)\n"
      ]
     }
    ],
    "source": [
     "# Extract information from document search results with filtering and details\n",
-    "print(\"Retrieving detailed information for documents...\")\n",
+    "\n",
     "# Read doc_info from JSON file\n",
     "with open(\"../data/01_scopus_results.json\", \"r\", encoding=\"utf-8\") as file:\n",
     "    results = json.load(file)\n",
     "\n",
-    "# tags, full_tags = list_tags(results)\n",
-    "# print(f\"Tags in the results: {tags}\")\n",
-    "# print(f\"Full tags in the results: {full_tags}\")\n",
-    "\n",
-    "print(f\"Total documents: {len(results)}\")\n",
-    "\n",
-    "doc_info = extract_info(results, client, fetch_details=True, verbose=False)"
+    "# Convert to DataFrame for pandas processing\n",
+    "results_df = pd.DataFrame(results)\n",
+    "doc_info = extract_info(results_df, client, fetch_details=True, verbose=False)"
    ]
   },
   {
@@ -343,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,22 +386,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV exported with 512 records\n",
-      "JSON exported with 512 records\n",
+      "JSON exported with 581 records\n",
       "Search results exported successfully.\n"
      ]
     }
    ],
    "source": [
     "# Export document search results to CSV and JSON\n",
-    "export_to_csv(doc_info, \"../data/02_document_search_results.csv\")\n",
+    "# export_to_csv(doc_info, \"../data/02_document_search_results.csv\")\n",
     "export_to_json(doc_info, \"../data/02_document_search_results.json\")\n",
     "\n",
     "print(\"Search results exported successfully.\")"
@@ -413,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
