Update configurations and clean up files for smart city and generative AI domains

--- a/notebooks/02-Extract_Scopus_Data.ipynb
+++ b/notebooks/02-Extract_Scopus_Data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,17 @@
     "import time\n",
     "\n",
     "from tqdm import tqdm\n",
+    "import pandas as pd\n",
+    "from tqdm.auto import tqdm\n",
     "from elsapy.elsdoc import FullDoc, AbsDoc\n",
-    "from elsapy.elsclient import ElsClient"
+    "from elsapy.elsclient import ElsClient\n",
+    "\n",
+    "tqdm.pandas()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,14 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to extract relevant information from search results with filtering\n",
     "def extract_info(results, client, fetch_details=True, verbose=False):\n",
-    "    extracted_data = []\n",
-    "\n",
+    "    # Convert results to DataFrame if not already\n",
+    "    if not isinstance(results, pd.DataFrame):\n",
+    "        df_results = pd.DataFrame(results)\n",
+    "    else:\n",
+    "        df_results = results\n",
+    "    \n",
     "    # Statistics tracking\n",
     "    stats = {\n",
     "        \"total\": 0,\n",
@@ -155,11 +162,16 @@
     "        \"with_keywords\": 0,\n",
     "        \"with_subject_areas\": 0,\n",
     "    }\n",
-    "\n",
-    "    # Use tqdm for progress tracking\n",
-    "    for i, result in enumerate(tqdm(results, desc=\"Processing documents\")):\n",
+    "    \n",
+    "    # Function to process a single document\n",
+    "    def process_document(result):\n",
+    "        nonlocal stats\n",
     "        stats[\"total\"] += 1\n",
-    "\n",
+    "        \n",
+    "        # If result is a Series (row of DataFrame), convert to dict\n",
+    "        if isinstance(result, pd.Series):\n",
+    "            result = result.to_dict()\n",
+    "        \n",
     "        # Basic metadata from search results\n",
     "        data = {\n",
     "            \"title\": result.get(\"dc:title\", \"\"),\n",
@@ -172,7 +184,7 @@
     "                else \"\"\n",
     "            ),\n",
     "            \"document_type\": result.get(\"subtypeDescription\", \"\"),\n",
-    "            \"prism:url\" : result.get(\"prism:url\"),\n",
+    "            \"prism:url\": result.get(\"prism:url\"),\n",
     "            \"scopus_id\": (\n",
     "                result.get(\"dc:identifier\", \"\").replace(\"SCOPUS_ID:\", \"\")\n",
     "                if result.get(\"dc:identifier\")\n",
@@ -189,8 +201,8 @@
     "        if fetch_details:\n",
     "            try:\n",
     "                # Try different methods to get the abstract\n",
-    "                abstract_found = False\n",
-    "\n",
+    "                abstract_found = \"abstract\" in data\n",
+    "                \n",
     "                # Method 1: Try to get abstract from AbsDoc if scopus_id is available\n",
     "                if data[\"scopus_id\"] and not abstract_found:\n",
     "                    abs_doc = AbsDoc(scp_id=data[\"scopus_id\"])\n",
@@ -200,9 +212,7 @@
     "                            \"coredata\" in abs_doc.data\n",
     "                            and \"dc:description\" in abs_doc.data[\"coredata\"]\n",
     "                        ):\n",
-    "                            data[\"abstract\"] = abs_doc.data[\"coredata\"][\n",
-    "                                \"dc:description\"\n",
-    "                            ]\n",
+    "                            data[\"abstract\"] = abs_doc.data[\"coredata\"][\"dc:description\"]\n",
     "                            abstract_found = True\n",
     "                            stats[\"with_abstract\"] += 1\n",
     "                        elif \"dc:description\" in abs_doc.data:\n",
@@ -254,13 +264,17 @@
     "\n",
     "            except Exception as e:\n",
     "                if verbose:\n",
-    "                    print(f\"Error retrieving details for document {i+1}: {str(e)}\")\n",
+    "                    print(f\"Error retrieving details for document: {str(e)}\")\n",
     "                    print(\n",
     "                        f\"Failed document: {data['title']} (DOI: {data.get('doi')}, ScopusID: {data['scopus_id']})\"\n",
     "                    )\n",
     "\n",
-    "        extracted_data.append(data)\n",
-    "\n",
+    "        return data\n",
+    "    \n",
+    "    # Process documents with pandas progress bar\n",
+    "    print(\"Processing documents...\")\n",
+    "    extracted_data = list(df_results.progress_apply(process_document, axis=1))\n",
+    "    \n",
     "    # Print capture statistics\n",
     "    print(\"\\nData Capture Statistics:\")\n",
     "    print(f\"Total documents processed: {stats['total']}\")\n",
@@ -274,12 +288,12 @@
     "        f\"Documents with subject areas: {stats['with_subject_areas']} ({stats['with_subject_areas']*100/stats['total']:.1f}%)\"\n",
     "    )\n",
     "\n",
-    "    return extracted_data\n"
+    "    return extracted_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -287,15 +301,23 @@
      "output_type": "stream",
      "text": [
       "Retrieving detailed information for documents...\n",
-      "Total documents: 512\n"
+      "Total documents: 581\n",
+      "Processing documents with pandas...\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing documents: 100%|██████████| 512/512 [12:04<00:00,  1.42s/it]"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "93c4d0accabe475daa64613a70a830c7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/581 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
@@ -303,34 +325,127 @@
      "text": [
       "\n",
       "Data Capture Statistics:\n",
-      "Total documents processed: 512\n",
-      "Documents with abstracts: 512 (100.0%)\n",
-      "Documents with keywords: 475 (92.8%)\n",
-      "Documents with subject areas: 475 (92.8%)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Total documents processed: 581\n",
+      "Documents with abstracts: 580 (99.8%)\n",
+      "Documents with keywords: 536 (92.3%)\n",
+      "Documents with subject areas: 536 (92.3%)\n"
      ]
     }
    ],
    "source": [
     "# Extract information from document search results with filtering and details\n",
-    "print(\"Retrieving detailed information for documents...\")\n",
+    "\n",
     "# Read doc_info from JSON file\n",
     "with open(\"../data/01_scopus_results.json\", \"r\", encoding=\"utf-8\") as file:\n",
     "    results = json.load(file)\n",
     "\n",
-    "# tags, full_tags = list_tags(results)\n",
-    "# print(f\"Tags in the results: {tags}\")\n",
-    "# print(f\"Full tags in the results: {full_tags}\")\n",
+    "# Convert to DataFrame for pandas processing\n",
+    "results_df = pd.DataFrame(results)\n",
+    "doc_info = extract_info(results_df, client, fetch_details=True, verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created DataFrame with 581 records and 11 columns\n",
+      "\n",
+      "Columns in the document info DataFrame:\n",
+      "['title', 'authors', 'journal', 'doi', 'publication_date', 'document_type', 'prism:url', 'scopus_id', 'abstract', 'author_keywords', 'subject_areas']\n",
+      "Cleaned title column\n",
+      "Cleaned abstract column\n",
+      "\n",
+      "Sample of cleaned data:\n",
+      "                                               title  \\\n",
+      "0  An interactive address matching method based o...   \n",
+      "1  Intelligent pattern design using 3D modelling ...   \n",
+      "2  GeoAvatar: A big mobile phone positioning data...   \n",
+      "\n",
+      "                                            abstract  \\\n",
+      "0  Problem: Modernizing and standardizing place n...   \n",
+      "1  3D modeling is actuality hired more and more b...   \n",
+      "2  The importance of personal mobility data is wi...   \n",
+      "\n",
+      "                                     author_keywords  \n",
+      "0  [Address matching, Attention-based feature int...  \n",
+      "1  [3D modelling, Urban sculpture designing, 3D-S...  \n",
+      "2  [Big mobility data, Generative model, GIS, Mah...  \n",
+      "\n",
+      "Updated original doc_info with cleaned data\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
     "\n",
-    "print(f\"Total documents: {len(results)}\")\n",
+    "# Analyze and clean the document data\n",
     "\n",
-    "doc_info = extract_info(results, client, fetch_details=True, verbose=False)"
+    "# Create a DataFrame from doc_info if it's a list\n",
+    "if isinstance(doc_info, list):\n",
+    "    doc_info_df = pd.DataFrame(doc_info)\n",
+    "    print(f\"Created DataFrame with {len(doc_info_df)} records and {len(doc_info_df.columns)} columns\")\n",
+    "else:\n",
+    "    doc_info_df = doc_info\n",
+    "    print(f\"Using existing DataFrame with {len(doc_info_df)} records\")\n",
+    "\n",
+    "# Display the columns to understand the structure\n",
+    "print(\"\\nColumns in the document info DataFrame:\")\n",
+    "print(doc_info_df.columns.tolist())\n",
+    "\n",
+    "# Function to clean text by removing unwanted characters and weird symbols\n",
+    "def clean_text(text):\n",
+    "    if not isinstance(text, str):\n",
+    "        return text\n",
+    "    \n",
+    "    # Remove Unicode characters like \\u00a0 (non-breaking space)\n",
+    "    text = text.replace('\\u00a0', ' ')\n",
+    "    \n",
+    "    # Remove XML/HTML tags\n",
+    "    text = re.sub(r'<[^>]+>', ' ', text)\n",
+    "    \n",
+    "    # Replace multiple spaces with a single space\n",
+    "    text = re.sub(r'\\s+', ' ', text)\n",
+    "    \n",
+    "    # Other common replacements\n",
+    "    text = text.replace('&lt;', '<').replace('&gt;', '>').replace('&amp;', '&')\n",
+    "    \n",
+    "    # Trim whitespace\n",
+    "    text = text.strip()\n",
+    "    \n",
+    "    return text\n",
+    "\n",
+    "# Apply cleaning to text columns\n",
+    "columns_to_clean = ['title', 'abstract']\n",
+    "if 'author_keywords' in doc_info_df.columns:\n",
+    "    # For lists of keywords, we need to clean each item\n",
+    "    doc_info_df['author_keywords'] = doc_info_df['author_keywords'].apply(\n",
+    "        lambda keywords: [clean_text(k) for k in keywords] if isinstance(keywords, list) else keywords\n",
+    "    )\n",
+    "\n",
+    "# Apply the clean_text function to text columns\n",
+    "for col in columns_to_clean:\n",
+    "    if col in doc_info_df.columns:\n",
+    "        doc_info_df[col] = doc_info_df[col].apply(clean_text)\n",
+    "        print(f\"Cleaned {col} column\")\n",
+    "\n",
+    "# Show sample of cleaned data\n",
+    "print(\"\\nSample of cleaned data:\")\n",
+    "sample_cols = [col for col in columns_to_clean if col in doc_info_df.columns]\n",
+    "if 'author_keywords' in doc_info_df.columns:\n",
+    "    sample_cols.append('author_keywords')\n",
+    "    \n",
+    "if sample_cols:\n",
+    "    print(doc_info_df[sample_cols].head(3))\n",
+    "\n",
+    "# Update the original doc_info list with the cleaned data\n",
+    "if isinstance(doc_info, list):\n",
+    "    doc_info = doc_info_df.to_dict('records')\n",
+    "    print(\"\\nUpdated original doc_info with cleaned data\")"
    ]
   },
   {
@@ -343,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,22 +490,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV exported with 512 records\n",
-      "JSON exported with 512 records\n",
+      "JSON exported with 581 records\n",
       "Search results exported successfully.\n"
      ]
     }
    ],
    "source": [
     "# Export document search results to CSV and JSON\n",
-    "export_to_csv(doc_info, \"../data/02_document_search_results.csv\")\n",
+    "# export_to_csv(doc_info, \"../data/02_document_search_results.csv\")\n",
     "export_to_json(doc_info, \"../data/02_document_search_results.json\")\n",
     "\n",
     "print(\"Search results exported successfully.\")"
@@ -413,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
